# deepstats

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  VALIDATION_REPORT.md  deep_ols.py  frac_and_tobit.py  full_requirements_next_gen.md  mc_results.csv  mc_results.metrics.csv  paper_replication_details.md  pyproject.toml  smoke_e2e_user_run_tests.md  smoke_test.py  temp.ipynb  tutorial.md
archive/deep_inference_v1/: CLAUDE.md  __init__.py  metrics.py  models.py  real_data.py  run_mc.py  run_real.py
archive/deepstats_v1/: __init__.py  deep_mlogit.py  deep_ra.py
archive/evals_experimental/: eval_01_fix_binary.py  eval_07_e2e.py  test_numerical_stability.py
archive/logs_historical/: CLAUDE.md  mc_run_20260105_201736_readable.txt  mc_run_20260105_213358_readable.txt  mc_run_20260107_091111_readable.txt
archive/prototypes_broken/: README.md  run_python.py
archive/prototypes_src2/: comprehensive_study.py  comprehensive_study_v2.py  lambda_full_test.py  linear_validation.py  poisson_validation.py  test_large_n.py
archive/results_old/: comprehensive_poisson_N5000_M5.csv  comprehensive_poisson_log.txt  linear_validation_20260107_192216.csv  logit_validation_20260108_141045_progress.csv
docs/: Makefile  conf.py  flowchart.md  generate_quickstart_plots.py  index.md  make.bat  requirements.txt
docs/_static/: custom.css
docs/algorithm/: index.md
docs/api/: dgp.md  families.md  index.md  inference.md  lambda.md  metrics.md  models.md  targets.md
docs/getting_started/: index.md  (+3 more)
evals/: __init__.py  dgp.py  eval.md  eval_01_theta.py  eval_02_autodiff.py  eval_03_lambda.py  eval_04_jacobian.py  eval_05_psi.py  eval_06_coverage.py  eval_07_e2e.py  eval_08_docs.py  eval_08_regularization.py  evals_report_full.txt  evals_report_quick.txt  report.py  run_all.py
logs/: CLAUDE.md  mc_run_20260105_201447_readable.txt  mc_run_20260107_034302_readable.txt  mc_run_20260107_034341_readable.txt  mc_run_20260107_090824_readable.txt  mc_run_20260107_090943_readable.txt  mc_run_20260108_131544_readable.txt  plot_kde.py  plot_logit.py  plot_logit_both.py  plot_tobit.py
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
prototypes/: README.md  basic_usage.py  brutal_verification.py  comprehensive_study.py  debug_first_stage.py  lambda_investigation.py  lambda_ridge_test.py  logit_validation.py  misra_validation_results.csv  validate_misra.py  validation_study.py
references/: FLM2021.txt  FLM2021_part_aa  FLM2021_part_ab  FLM2021_part_ac  FLM2025.txt  FLM2025_part_aa  FLM2025_part_ab  FLM2025_part_ac  FLM2025_part_ad  datasets_info.md  references.bib
results/: comprehensive_poisson_N50000_M100.csv  logit_validation_20260108_131338_progress.csv  validation_study_20260107_141815.json
src2/: __init__.py
tests/: conftest.py  test_estimators.py
tutorials/: 01_linear_oracle.ipynb  01_showcase.ipynb  02_logit_oracle.ipynb  03_pypi_e2e_test.ipynb  04_poisson_e2e_test.ipynb  05_john_minnesota_e2e.py  06_multimodal_gallery.ipynb  06_multimodal_gallery.py
(+5124 files in other folders)
