[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-inference"
version = "0.1.2"
description = "Production-grade econometrics with neural networks"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Pranjal Rawat"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "econometrics",
    "causal-inference",
    "deep-learning",
    "neural-networks",
    "statistics",
    "machine-learning",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "formulaic>=1.0",
    "tabulate>=0.9",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
parity = [
    "rpy2>=3.5",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
]
plotting = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
all = [
    "deep-inference[dev,parity,docs,plotting]",
]

[project.urls]
Homepage = "https://github.com/rawatpranjal/deep-inference"
Repository = "https://github.com/rawatpranjal/deep-inference"
Documentation = "https://rawatpranjal.github.io/deep-inference"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deep_inference = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["deep_inference"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "scipy.*",
    "sklearn.*",
    "formulaic.*",
    "tabulate.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/deep_inference/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/deep_inference"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
